--- a/_layouts/alt.html
+++ b/_layouts/alt.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <title>{{ page.title }} - {{ site.title }}</title>
-    <link rel="stylesheet" href="{{ "assets/css/alt.css" | relative_url }}">
+    <link rel="stylesheet" href="{{ "/assets/css/alt.css" | relative_url }}">
     <script type="text/javascript" src="/assets/js/randoText404.js"></script>
     <script type="text/javascript" src="/assets/js/BGM.js"></script>
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
