--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,6 @@
     <script type="text/javascript" src="/assets/js/musicPlayer.js"></script>
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | relative_url }}" />
     <!-- Primary Meta Tags -->
     <title>Mesa's Music Reviews</title>
     <meta name="title" content="Mesa's Music Reviews" />
@@ -39,7 +38,7 @@
                     <li><a href="/"><img src="/assets/images/nav/home.gif" alt="Home"></a></li>
                     <li><a href="/about"><img src="/assets/images/nav/about.gif" alt="About Me"></a></li>
                     <li><a href="/reviews"><img src="/assets/images/nav/reviews.gif" alt="Reviews"></a></li>
-                    <li><a href="http://users3.smartgb.com/g/g.php?a=s&i=g36-35627-f1"><img src="/assets/images/nav/guest.gif" alt="Guestbook"></a></li>
+                    <li><a href="http://users3.smartgb.com/g/g.php?a=s&i=g36-37622-59"><img src="/assets/images/nav/guest.gif" alt="Guestbook"></a></li>
                     <li><a href="/collection"><img src="/assets/images/nav/collection.gif" alt="Record Collection"></a></li>
                 </ul>
             </nav>
